feat(styles): create primary link class

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,4 +24,8 @@
   .primary-button {
     @apply inline-flex h-11 items-center justify-center rounded-lg border border-transparent bg-blue-50 px-5 text-center font-bold text-white hover:bg-blue-60 dark:bg-blue-30 dark:text-gray-90 dark:hover:bg-blue-40;
   }
+
+  .primary-link {
+    @apply font-bold text-blue-50 hover:text-blue-60 dark:text-blue-30 dark:hover:text-blue-40;
+  }
 }
